feat: add title option and max-length to this question

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^9.1.4"
+    "inquirer": "^9.1.4",
+    "inquirer-maxlength-input-prompt": "^1.0.2"
   },
   "type": "module"
 }
